added score feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>TypeMaster</title>
   </head>
   <body>
+    <h2>Hands on keyboard , eyes on screen ..</h2>
+    <div class="score-bd">
+      <div>
+        <div class="score-div">Score</div>
+        <p class="score">0</p>
+      </div>
+      <div class="high-sc">
+        High Score
+        <p class="hi-sc">0</p>
+      </div>
+    </div>
     <div class="keyboard-base">
       <div class="key">~</div>
       <div class="key">1</div>
