--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h2>Hands on keyboard , eyes on screen ..</h2>
     <div class="score-bd">
       <div>
-        <div class="score-div">Score</div>
+        <div class="score-div">Score ⭐</div>
         <p class="score">0</p>
       </div>
       <div class="high-sc">
-        High Score
+        High Score 🔥
         <p class="hi-sc">0</p>
       </div>
     </div>
