used arrow function and addded common classes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>TypeMaster</title>
   </head>
   <body>
-    <h2>Hands on keyboard , eyes on screen ..</h2>
-    <div class="score-bd">
+    <h2 class="head">Hands on keyboard , eyes on screen ..</h2>
+    <div class="score-board">
       <div>
         <div class="score-div">Score ⭐</div>
         <p class="score">0</p>
       </div>
-      <div class="high-sc">
+      <div class="high-score-div">
         High Score 🔥
-        <p class="hi-sc">0</p>
+        <p class="high-score">0</p>
       </div>
     </div>
     <div class="keyboard-base">
